Add compliance engine modules and UI sync

--- a/index.html
+++ b/index.html
@@ -2743,7 +2743,7 @@
                             </div>
                         </div>
                         <button class="btn btn-primary" id="compliance-run-scan">
-                            <i class="fas fa-wave-square"></i> Re-run Compliance Scan
+                            <i class="fas fa-wave-square"></i> Run Compliance Scan
                         </button>
                     </div>
 
@@ -2751,6 +2751,7 @@
                         <div class="compliance-summary__chip severity-high">High: <span id="compliance-summary-high">0</span></div>
                         <div class="compliance-summary__chip severity-medium">Medium: <span id="compliance-summary-medium">0</span></div>
                         <div class="compliance-summary__chip severity-low">Low: <span id="compliance-summary-low">0</span></div>
+                        <div class="compliance-summary__chip">Last Scan: <span id="compliance-summary-last-scan">--</span></div>
                     </div>
 
                     <div class="compliance-category-grid" id="compliance-category-grid">
