Fix ERM script loading and init guard

--- a/index.html
+++ b/index.html
@@ -4516,7 +4516,7 @@
     </div>
 
     <script type="module" src="./backend/expenseRecordService.js"></script>
-    <script type="module" src="expenseRecordUI.js"></script>
+    <script type="module" src="./expenseRecordUI.js"></script>
     <script src="payrollAnomalyDetector.js"></script>
     <script>
         const EMPLOYEE_STORAGE_KEY = 'employees';
