Add ERM diagnostics and visibility guard

--- a/index.html
+++ b/index.html
@@ -4516,7 +4516,7 @@
     </div>
 
     <script type="module" src="./backend/expenseRecordService.js"></script>
-    <script type="module" src="expenseRecordUI.js"></script>
+    <script type="module" src="./expenseRecordUI.js"></script>
     <script src="payrollAnomalyDetector.js"></script>
     <script>
         const EMPLOYEE_STORAGE_KEY = 'employees';
@@ -5270,6 +5270,10 @@
             } else if (sectionId === 'compliance-manager') {
                 updateComplianceWidgets();
             } else if (sectionId === 'expense-record-page') {
+                const expenseSection = document.getElementById('expense-record-page');
+                if (expenseSection) {
+                    expenseSection.classList.remove('hidden');
+                }
                 if (!canManageExpenses()) {
                     showSection('dashboard');
                     return;
