--- a/index.html
+++ b/index.html
@@ -2765,7 +2765,7 @@
         <div class="login-box">
             <!-- Login Form -->
             <div id="login-form">
-                <img src="./assets/logo_eye.png" alt="eye logo" class="login-logo">
+                <img src="./assets/Abstract eye logo with vibrant accents.png" alt="eye logo" class="login-logo">
                 <div class="login-title">Samkitec Resources</div>
                 <h2>Login</h2>
                 <div class="form-group">
@@ -2788,7 +2788,7 @@
             
             <!-- Signup Form -->
             <div id="signup-form" class="hidden">
-                <img src="./assets/logo_eye.png" alt="eye logo" class="login-logo">
+                <img src="./assets/Abstract eye logo with vibrant accents.png" alt="eye logo" class="login-logo">
                 <div class="login-title">Samkitec Resources</div>
                 <h2>Sign Up</h2>
                 <div class="form-group">
@@ -2836,7 +2836,7 @@
 
     <!-- Splash Screen -->
     <div id="splash-screen" class="splash-screen" aria-hidden="true">
-        <img src="./assets/logo_eye.png" alt="eye logo" class="splash-logo animate-fadeZoom">
+        <img src="./assets/Abstract eye logo with vibrant accents.png" alt="eye logo" class="splash-logo animate-fadeZoom">
     </div>
 
     <!-- Main Application (Initially hidden) -->
@@ -4689,7 +4689,7 @@
                 });
 
                 const logo = document.createElement('img');
-                logo.src = './assets/logo_eye.png';
+                logo.src = './assets/Abstract eye logo with vibrant accents.png';
                 logo.alt = 'Samkitec logo';
                 logo.className = 'header-logo__image';
 
@@ -8642,6 +8642,7 @@ Employees: ${employeeSummary}`);
     </script>
 </body>
 </html>
+
 
 
 
