Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -2766,7 +2766,7 @@
             <!-- Login Form -->
             <div id="login-form">
                 <img src="./assets/Abstract eye logo with vibrant accents.png" alt="eye logo" class="login-logo">
-                <div class="login-title">Samkitec Resources</div>
+                <div class="login-title">AKBAR EYE HOSPITAL</div>
                 <h2>Login</h2>
                 <div class="form-group">
                     <label for="login-email">Email</label>
@@ -8642,6 +8642,7 @@ Employees: ${employeeSummary}`);
     </script>
 </body>
 </html>
+
 
 
 
