Implement payroll-run linked compliance scan and UI

--- a/index.html
+++ b/index.html
@@ -3073,7 +3073,8 @@
                                     <tr>
                                         <th>Employee Name</th>
                                         <th>Risk Score</th>
-                                        <th>Risk Level</th>
+                                        <th>Severity</th>
+                                        <th>Violations</th>
                                         <th>Actions</th>
                                     </tr>
                                 </thead>
